packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_src9_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        src9: SRC9Component::Storage,
    }

    use openzeppelin_account::extensions::SRC9Component;

    component!(path: SRC9Component, storage: src9, event: SRC9Event);

    impl SRC9InternalImpl = SRC9Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        SRC9Event: SRC9Component::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initilizers for the following components are missing:

SRC9

This may lead to unexpected behavior. We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
