packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_votes_no_metadata.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub votes: VotesComponent::Storage,
    }

    use openzeppelin_governance::votes::VotesComponent;

    component!(path: VotesComponent, storage: votes, event: VotesEvent);

    impl VotesInternalImpl = VotesComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        VotesEvent: VotesComponent::Event,
    }
}


Diagnostics:

====
Warning: The Votes component requires an implementation of the SNIP12Metadata trait. It looks like this implementation is missing.
====

AuxData:

None
